--- a/app/src/main/res/layout/custom_danhmucsp.xml
+++ b/app/src/main/res/layout/custom_danhmucsp.xml
@@ -70,6 +70,15 @@
                     android:layout_marginTop="7dp"
                     android:text="Thức ăn"
                     android:textSize="17sp" />
+
+                <RadioButton
+                    android:id="@+id/rb_Topping"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="7dp"
+                    android:text="Topping"
+                    android:textSize="17sp" />
             </RadioGroup>
         </LinearLayout>
 
