--- a/app/src/main/res/layout/activity_list_product.xml
+++ b/app/src/main/res/layout/activity_list_product.xml
@@ -25,7 +25,7 @@
             android:textSize="23sp" />
 
         <Button
-            android:id="@+id/img_AddDSBV"
+            android:id="@+id/btn_AddProduct"
             android:layout_width="80dp"
             android:layout_height="30dp"
             android:layout_gravity="bottom|right"
